[package]
name = "find-cargo-toml"
version = "0.0.1"
authors = ["YONGQI <betterhyq@qq.com>"]
edition = "2024"
description = "A template for creating a crate package"
readme = "README.md"
homepage = "https://github.com/betterhyq/find-cargo-toml"
repository = "https://github.com/betterhyq/find-cargo-toml.git"
license = "MIT"
keywords = [""]
categories = ["development-tools"]

[dependencies]
